--- a/MusicClient/app/src/main/res/layout/activity_music.xml
+++ b/MusicClient/app/src/main/res/layout/activity_music.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:padding="4dp"
         android:scrollbars="vertical"
-        android:background="@color/buttonDisable"/>
+        android:background="@color/buttonDisable"
+        android:backgroundTint="@color/cardview_dark_background"/>
 
 </LinearLayout>
