--- a/MusicClient/app/src/main/res/layout/rv_item.xml
+++ b/MusicClient/app/src/main/res/layout/rv_item.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    android:layout_margin="2dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp">
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:padding="2dp"/>
+            android:padding="2dp" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
             android:layout_toEndOf="@+id/imageView"
+            android:text="Title"
             android:textSize="20sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/artist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Artist"
             android:layout_below="@+id/title"
             android:layout_toEndOf="@+id/imageView"
+            android:text="Artist"
             android:textSize="20sp"
             android:textStyle="italic" />
-
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
