--- a/MusicClient/app/src/main/res/layout/activity_music.xml
+++ b/MusicClient/app/src/main/res/layout/activity_music.xml
@@ -3,17 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MusicActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/pauseButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/pause_music"
+            android:visibility="invisible"/>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="4dp"
-        android:scrollbars="vertical"
         android:background="@color/buttonDisable"
-        android:backgroundTint="@color/cardview_dark_background"/>
+        android:padding="4dp"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
