--- a/MusicClient/app/src/main/res/layout/rv_item.xml
+++ b/MusicClient/app/src/main/res/layout/rv_item.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    app:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,6 +35,7 @@
             android:text="Artist"
             android:textSize="20sp"
             android:textStyle="italic" />
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
